--- a/README.ipynb
+++ b/README.ipynb
@@ -37,7 +37,7 @@
     "5. [Task 5 (weekday.py)](#task5)\n",
     "5. [Task 6 (squareroot.py)](#task6)\n",
     "5. [Task 7 (es.py)](#task7)\n",
-    "6. [Task 8 (XXXX)](#task8)"
+    "6. [Task 8 (plottask.py)](#task8)"
    ]
   },
   {
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "f58ebae0",
    "metadata": {},
    "outputs": [
@@ -118,8 +118,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter amount1(in cent): 1\n",
-      "Enter amount2(in cent): 1\n"
+      "Enter amount1(in cent): 123\n",
+      "Enter amount2(in cent): 132\n"
      ]
     }
    ],
@@ -131,10 +131,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "14c4ca46",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The sum of these is €2.55\n"
+     ]
+    }
+   ],
    "source": [
     "# Add the 2 inputs \n",
     "total_cent = input1 + input2\n",
@@ -142,52 +150,32 @@
     "# Assign the total as a string.\n",
     "# This avoids introducing float types later and will allow string formatting to get the desired output format.\n",
     "# The last 2 characters will be the cent amount and everything before that is the euro amount.\n",
-    "total_cent = str(total_cent)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "96af805a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "total_cent = str(total_cent)\n",
+    "\n",
     "# However, if the total_cent amount is 10c or less, then leading zeroes are required to pad out the total amount string.\n",
-    "# Assign these by checking the length of total cent. \n",
+    "# Find the required number of leading zeroes by checking the length of total_cent. \n",
     "# If total_cent is 3 characters or less (<10c) then leading zeroes are added to the start of total_cent. \n",
     "leading_zeroes = \"0\" * (3 - len(total_cent))\n",
-    "total_cent = leading_zeroes + total_cent    "
+    "# Append any leading zeroes to the total_cent amount\n",
+    "total_cent = leading_zeroes + total_cent    \n",
+    "\n",
+    "# The string slice can then be applied to separate the euro and cent amounts [Ref 1].\n",
+    "# The cent amount is the last 2 digits, everything up to the last 2 digits is the euro amount. \n",
+    "# The amount is outputted to the screen in the required format.\n",
+    "cent_amount = total_cent[-2:]\n",
+    "euro_amount = total_cent[:-2]\n",
+    "print(f\"The sum of these is €{euro_amount}.{cent_amount}\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "149d48d9",
+   "id": "8ba69380",
    "metadata": {},
    "source": [
-    "- The string slices are applied (the last two digits being cents) [[Ref 1]](#ref2.1)\n",
-    "- Everything up to the last 2 digits is euro.\n",
-    "- The amount is outputted to screen in the required format."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "bf44f9d2",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The sum of these is €0.02\n"
-     ]
-    }
-   ],
-   "source": [
-    "# The string slice can then be applied to separate the euro and cent amounts.\n",
-    "cent_amount = total_cent[-2:]\n",
-    "euro_amount = total_cent[:-2]\n",
-    "print(f\"The sum of these is €{euro_amount}.{cent_amount}\")"
+    "**Program Notes:**\n",
+    "- The program will throw an error if anything other than an integer is entered.\n",
+    "- As this task refers to banks handling currency amounts as integer types to avoid floating point errors, the assumption is made that float types are to be avoided. Therefore string manipulation is used to find the euro and cent amounts.\n",
+    "- Alternatively, the // and % operands may be used to find euro and cent amounts (//100, %100), however, in the case of total cent amounts <10, % will return a cent amount that requires padding."
    ]
   },
   {
@@ -569,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "7196b64c",
    "metadata": {},
    "outputs": [
@@ -577,8 +565,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Please enter a positive number: 123\n",
-      "The square root of 123.0 is approx. 11.1.\n"
+      "Please enter a positive number: 132\n",
+      "The square root of 132.0 is approx. 11.5.\n"
      ]
     }
    ],
@@ -658,26 +646,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "e95ed5eb",
+   "execution_count": null,
+   "id": "a4304f89",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: '-f'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [4]\u001b[0m, in \u001b[0;36m<cell line: 14>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      9\u001b[0m char_count \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[0;32m     11\u001b[0m \u001b[38;5;66;03m# Open the file and ignore any errors thrown by unknown characters\u001b[39;00m\n\u001b[0;32m     12\u001b[0m \u001b[38;5;66;03m# Avoids issues when reading non utf-8 encoded files [Ref 2,3].\u001b[39;00m\n\u001b[0;32m     13\u001b[0m \u001b[38;5;66;03m# With open method to open the file as a textfile in read mode\u001b[39;00m\n\u001b[1;32m---> 14\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mFILENAME\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mrt\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43merrors\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mignore\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[0;32m     15\u001b[0m \u001b[38;5;66;03m# Reading the file line by line to avoid errors with very large files\u001b[39;00m\n\u001b[0;32m     16\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m line \u001b[38;5;129;01min\u001b[39;00m f:\n\u001b[0;32m     17\u001b[0m        \u001b[38;5;66;03m# Convert the line to all lower case before counting 'e' so that the count isn't case-sensitive [Ref.2]\u001b[39;00m\n\u001b[0;32m     18\u001b[0m        \u001b[38;5;66;03m# dfe \u001b[39;00m\n\u001b[0;32m     19\u001b[0m        char_count \u001b[38;5;241m=\u001b[39m line\u001b[38;5;241m.\u001b[39mlower()\u001b[38;5;241m.\u001b[39mcount(search_char) \u001b[38;5;241m+\u001b[39m char_count\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '-f'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# Import the sys module which will allow arguments to passed via the command line [Ref 1]\n",
     "import sys\n",
     "\n",
-    "#  Take the filename from the command line using the .argv method. The filename is the second item so is denoted [1]\n",
+    "#  Take the filename from the command line using the .argv method [Ref 1]. The filename is the second item so is denoted [1]\n",
     "FILENAME = sys.argv[1]\n",
     "\n",
     "# Define the character to search for\n",
@@ -695,7 +672,7 @@
     "       char_count = line.lower().count(search_char) + char_count\n",
     "\n",
     "# print the number of 'e's\n",
-    "print(char_count)"
+    "print(char_count)\n"
    ]
   },
   {
@@ -704,7 +681,7 @@
    "metadata": {},
    "source": [
     "**Program Notes:**\n",
-    "- The program must be run from the command line by typing: \n",
+    "- The program is run from the command line by typing: \n",
     "```\n",
     "$ python es.py filename.txt\n",
     "```\n",
@@ -729,6 +706,68 @@
     "3. Errors when reading files: https://stackoverflow.com/questions/9233027/unicodedecodeerror-charmap-codec-cant-decode-byte-x-in-position-y-character <a id=\"ref7.3\"></a> \n",
     "4. Encoding differences: https://stackoverflow.com/questions/26324622/what-characters-do-not-directly-map-from-cp1252-to-utf-8 <a id=\"ref7.4\"></a> \n",
     "5. Example text files :  https://github.com/laumann/ds/tree/master/hashing/books <a id=\"ref7.5\"></a> \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6acd2b66",
+   "metadata": {},
+   "source": [
+    "- - - \n",
+    "\n",
+    "## Task 8 (plottask.py) <a id=\"task8\"></a> <span style=\"font-size: 8pt;\"> [[TOC]](#toc)</span>\n",
+    "\n",
+    "\n",
+    "**Task Description:**\n",
+    "\n",
+    "<i>\n",
+    "Write a program called plottask.py that displays:\n",
+    "\n",
+    "a histogram of a normal distribution of a 1000 values with a mean of 5 and standard deviation of 2, \n",
+    "and a plot of the function  h(x)=x3 in the range [0, 10], \n",
+    "on the one set of axes.\n",
+    "Some marks will be given for making the plot look nice (legend etc).\n",
+    "\n",
+    "</i> \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d20be8af",
+   "metadata": {},
+   "source": [
+    "**Program Implementation:**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "515eb182",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#python"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "93ae8c20",
+   "metadata": {},
+   "source": [
+    "**Program Notes:**\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f9328642",
+   "metadata": {},
+   "source": [
+    "**References:**\n",
+    "\n",
+    "1. Numpy random generator: https://numpy.org/doc/stable/reference/random/index.html#random-quick-start <a id=\"ref8.1\"></a> \n",
+    "2. Pyplot methods: https://matplotlib.org/3.1.1/api/pyplot_summary.html\n",
+    "3. https://www.geeksforgeeks.org/floor-ceil-function-python/\n",
+    "4. Gridlines: https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.grid.html"
    ]
   },
   {
