--- a/README.ipynb
+++ b/README.ipynb
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "808b5bb3",
+   "id": "bd316ae9",
    "metadata": {},
    "source": [
     "**Program Notes:**\n",
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 54,
    "id": "ad454830",
    "metadata": {},
    "outputs": [
@@ -331,7 +331,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Please enter a positive integer: 123\n"
+      "Please enter a positive integer: 10\n"
      ]
     }
    ],
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 57,
    "id": "72fb286f",
    "metadata": {},
    "outputs": [
@@ -360,7 +360,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "123 370 185 556 278 139 418 209 628 314 157 472 236 118 59 178 89 268 134 67 202 101 304 152 76 38 19 58 29 88 44 22 11 34 17 52 26 13 40 20 10 5 16 8 4 2 1 \n"
+      "10 5 16 8 4 2 1 \n"
      ]
     }
    ],
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 58,
    "id": "a4e7062a",
    "metadata": {},
    "outputs": [
@@ -657,7 +657,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a31e595",
+   "id": "32d2b563",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -720,7 +720,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c55ee867",
+   "id": "90c7c244",
    "metadata": {},
    "source": [
     "- - - \n",
@@ -743,7 +743,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0af6f6eb",
+   "id": "63ee3747",
    "metadata": {},
    "source": [
     "**Program Implementation:**"
@@ -751,9 +751,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "id": "5b522bcf",
-   "metadata": {},
+   "execution_count": 62,
+   "id": "9767c343",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -810,7 +812,7 @@
     "\n",
     "# Define the array of bins using the min and max data - \n",
     "# Add 1 bin_size to the upper to capture the upper bound of the data\n",
-    "# Bin width is set above [Ref 7][Ref 3]\n",
+    "# Bin width is set above [Ref 7][Ref 3][Ref 8]\n",
     "bins = np.arange(random_data_floor, random_data_ceiling + bin_size, bin_size)\n",
     "\n",
     "# Define a numpy array with lower and upper bounds\n",
@@ -869,19 +871,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d268b598",
+   "id": "cb77c353",
    "metadata": {},
    "source": [
     "**Program Notes:**\n",
     "1. Given the disparity between the upper bounds of the 2 sets of data (when a suitable bin size is picked to display the histogram) and the fact that the function is deterministic, the data is better displayed with a y-axis upper bound lower than the auto value. The upper bound value  for the y-axis can be easily changed in the program where the parameters are set.\n",
     "```\n",
     "yaxis_upper_bound = 150\n",
-    "```"
+    "```\n",
+    "2. The task asks for the function y=x^3 to be plotted for range[0,10]. I've interpreted this as meaning that the function should be plotted for values of x between 0 and 10 inclusive. This data is plotted but not fully displayed as discussed above."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "8bc295b0",
+   "id": "0255179a",
    "metadata": {},
    "source": [
     "**References:**\n",
@@ -892,7 +895,8 @@
     "4. Getting floor and ceiling: https://www.geeksforgeeks.org/floor-ceil-function-python/ <a id=\"ref8.4\"></a> \n",
     "5. Gridlines: https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.grid.html <a id=\"ref8.5\"></a> \n",
     "6. Major and minor ticks: https://matplotlib.org/3.4.3/gallery/ticks_and_spines/major_minor_demo.html <a id=\"ref8.6\"></a> \n",
-    "7. Numpy range generation: https://numpy.org/doc/stable/reference/generated/numpy.arange.html <a id=\"ref8.7\"></a> "
+    "7. Numpy range generation: https://numpy.org/doc/stable/reference/generated/numpy.arange.html <a id=\"ref8.7\"></a> \n",
+    "8. Histogram bin sizing: https://www.statology.org/matplotlib-bin-size/"
    ]
   }
  ],
