last readme updates and error check in sqrt

--- a/README.ipynb
+++ b/README.ipynb
@@ -369,7 +369,6 @@
    "source": [
     "**Program Notes:**\n",
     "- The program applies the Collatz conjecture on any positive integer [[Ref 1]](#ref4.1)\n",
-    "- The program will throw an error if a float type is entered. \n",
     "- There is an infinite loop for the input which has a try statement to check if the value is an int. If an int is entered then there is a check for it being positive. The loop is only broken if the user enters a positive integer [[Ref 3]](#ref4.3)"
    ]
   },
@@ -510,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "501b4d61",
    "metadata": {},
    "outputs": [
@@ -549,8 +548,18 @@
     "    # Function returns the calculated root    \n",
     "    return x1\n",
     "\n",
-    "# Take in the value to be calculated and assign as float type\n",
-    "inputted_value = float(input(\"Please enter a positive number: \"))\n",
+    "# Loop to validate user input - infinite loop, throws exception if input isn't a float, will only break when the value is \n",
+    "# positive\n",
+    "while True:   \n",
+    "    try:\n",
+    "        inputted_value = float(input(\"Please enter a positive number: \"))\n",
+    "        if inputted_value > 0:\n",
+    "            break\n",
+    "        else:\n",
+    "            print(\"Not a positive number\")\n",
+    "    except ValueError:\n",
+    "        print(\"Not a positive number\")\n",
+    "\n",
     "# Call the function, passing the inputted_value to it.\n",
     "sq_root = sqrt(inputted_value)\n",
     "\n",
@@ -564,6 +573,7 @@
    "metadata": {},
    "source": [
     "**Program Notes:**\n",
+    "- The number inputted is checked to be a number and positive and the user will be asked for an input in a loop as in collatz.py\n",
     "- The program finds an approximation of a square root of a number (a) iteratively using Newton's method to approximate the root of the function $f(x):x^2-a$. This becomes: [[Ref 1]](#ref6.1)\n",
     "\n",
     "$$\n",
